--- a/server/pom.xml
+++ b/server/pom.xml
@@ -30,6 +30,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<version>42.2.27</version>
 			<scope>runtime</scope>
 		</dependency>
 
