--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>ShareIt</name>
+	<name>PostMe</name>
 
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
