--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 logging.level.org.springframework.web.client.RestTemplate=DEBUG
-#logging.level.org.apache.http=DEBUG
-#logging.level.httpclient.wire=DEBUG
 
 main.allow-circular-references=true
 
@@ -11,21 +9,11 @@ postme-server.url=http://localhost:8080
 jwt.secret=SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c
 jwt.lifetime=30m
 
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=always
+spring.redis.host=redis
+spring.redis.port=6379
+spring.redis.password=root
+spring.redis.databases=1
 
-#---
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postme
-spring.datasource.username=root
-spring.datasource.password=root
-#---
-spring.config.activate.on-profile=ci,test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:postmeauth
-spring.datasource.username=test
-spring.datasource.password=test
+
 
 
