--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -94,6 +94,11 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
